--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "app",
+  "name": "port2023-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@studio-freight/lenis": "^1.0.22",
+    "@studio-freight/lenis": "^1.0.19",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "gasp": "^0.0.2",
+    "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
-    "sass": "^1.66.1",
-    "styled-components": "^6.0.7",
+    "sass": "^1.64.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
